--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   google_maps_flutter: ^1.0.6
   geolocator: ^6.1.13
+  url_launcher: ^5.7.10
   dotted_border: ^1.0.6
   provider: ^4.3.3
   page_transition: ^1.1.7+6
